Fix docked player gap on sides (#173)
* Fix docked player gap on sides, still allows width dimension change (in percentage) and internal padding

* Update padding for player styles

Adjust padding for floating player and main now playing bar.

---------

--- a/styles/player.css
+++ b/styles/player.css
@@ -30,6 +30,9 @@
   left: 50%;
   height: var(--player-height, 80px);
   transform: translate3d(-50%, 0, 0);
+  padding: 0;
+}
+.floating .main-nowPlayingBar-container {
   padding: 0 var(--panel-gap);
 }
 
